2011-01-14  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Geoff Garen.

        ShouldLoadResourceForFrame should use strings, not URLs.
        https://bugs.webkit.org/show_bug.cgi?id=52476

        * WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
        (WTR::InjectedBundlePage::shouldLoadResourceForFrame): Update to use a WKStringRef.
        * WebKitTestRunner/InjectedBundle/InjectedBundlePage.h:

2011-01-14  Tony Gentilcore  <tonyg@chromium.org>

        Reviewed by David Levin.

        Add Tony Gentilcore as a reviewer
        https://bugs.webkit.org/show_bug.cgi?id=52480

        * Scripts/webkitpy/common/config/committers.py:

2011-01-14  David Levin  <levin@chromium.org>

        Reviewed by Eric Seidel.

        check-webkit-style: _FunctionState should keep track of where the function name starts.
        https://bugs.webkit.org/show_bug.cgi?id=52454

        * Scripts/webkitpy/style/checkers/cpp.py: Added function_name_start_position to
        _FunctionState and logic for setting it correctly.
        * Scripts/webkitpy/style/checkers/cpp_unittest.py: Added tests.

2011-01-14  Vincent Scheib  <scheib@chromium.org>

        Reviewed by David Levin.

        Add support to DumpRenderTree to use the GPU rather than software renderer
        https://bugs.webkit.org/show_bug.cgi?id=52333

        * DumpRenderTree/chromium/DumpRenderTree.cpp:
        (main):
        * Scripts/webkitpy/layout_tests/port/chromium.py:
        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:

2011-01-14  Tony Chang  <tony@chromium.org>

        Reviewed by Kent Tamura.

        [chromium] update fonts.conf to fix 6 linux tests in drt
        https://bugs.webkit.org/show_bug.cgi?id=52411

        * DumpRenderTree/chromium/fonts.conf: Update to match the copy in
            chromium's src/webkit/tools/test_shell/resources/fonts.conf

2011-01-14  Eric Seidel  <eric@webkit.org>

        Original patch from Peter Gal  <galpater@inf.u-szeged.hu>
