@@ -1,3 +1,13 @@
+2011-01-15  Jochen Eisinger  <jochen@chromium.org>
+
+        Reviewed by David Levin.
+
+        [chromium] remove obsolete createView method
+        https://bugs.webkit.org/show_bug.cgi?id=52437
+
+        * public/WebViewClient.h:
+        (WebKit::WebViewClient::createView):
+
 2011-01-14  Xiyuan Xia  <xiyuan@chromium.org>
 
         Reviewed by Darin Fisher.
