@@ -1,3 +1,14 @@
+2011-01-15  Jochen Eisinger  <jochen@chromium.org>
+
+        Reviewed by David Levin.
+
+        [chromium] remove obsolete createView method
+        https://bugs.webkit.org/show_bug.cgi?id=52437
+
+        * DumpRenderTree/chromium/WebViewHost.cpp:
+        (WebViewHost::createView):
+        * DumpRenderTree/chromium/WebViewHost.h:
+
 2011-01-14  Brian Weinstein  <bweinstein@apple.com>
 
         Reviewed by Geoff Garen.
